# 42KL-matrix

./: Cargo.toml  README.md
assets/: test.py
src/: linalg.rs  main.rs  matrix.rs  vector.rs
src/linalg/: alg.rs  errors.rs  ops.rs  utils.rs
src/matrix/: alg.rs  errors.rs  ops.rs  utils.rs
src/vector/: errors.rs  utils.rs  vector_add.rs  vector_scl.rs  vector_sub.rs
