[package]
name = "matrix42"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A linear algebra library developed as a project in the 42 ecosystem."
repository = "https://github.com/LaiAnTan/42KL-matrix"
readme = "README.md"
keywords = ["42", "matrix", "vector", "linear algebra"]
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
num = "0.4.3"

